# biblesync

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  README  README.md  WIRESHARK  autogen.sh  biblesync.7  biblesync.7.txt  biblesync.pc.in  biblesync.spec.in  configure.ac  usrinst.sh  win32.opts  win64.opts
cmake/: soversion.cmake
include/: Makefile.am  biblesync-version.hh.in  biblesync.hh
lib/: Makefile.am
man/: .nroff.cmd  biblesync.7  biblesync.7.txt  specification.n  specification.txt
src/: Makefile.am  biblesync.cc
test/: send-test.c
